--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,8 @@ section.feature {
 }
 .box-wrapper {
   position: relative;
-  display: table;
+  display: flex;
+  justify-content: center;
   width: 1100px;
   margin: auto;
   margin-top: 35px;
@@ -251,9 +252,9 @@ section.feature {
   width: 35%;
   height: 583px;
   padding: 40px;
-  float: left;
+  float:center;
   display: block;
-  border-radius: 30px 0px 0px 30px;
+  border-radius: 30px 30px 30px 30px;
   background: linear-gradient(144deg, #06283d 0%, #256d85 60%);
   color: #fff;
 }
