--- a/css/style.css
+++ b/css/style.css
@@ -243,13 +243,13 @@ section.feature {
   position: relative;
   display: flex;
   justify-content: center;
-  width: 1100px;
+  width: 400px;
   margin: auto;
-  margin-top: 35px;
+  /* margin-top: 35px; */
   border-radius: 30px;
 }
 .info-wrap {
-  width: 35%;
+  width: 100%;
   height: 583px;
   padding: 40px;
   float:center;
@@ -570,6 +570,7 @@ section.sec_module {
   }
 
   /* page home */
+
   /* book */
   section.cc{
     height: 500px;
@@ -607,6 +608,12 @@ section.sec_module {
   /* feauture */
     .coursecontent img {
       width: 200px;
+    }
+    #section-wrapper{
+      height: 800px;
+    }
+    .box-wrapper{
+      width: 300px;
     }
   /* page reading begin */
   section.banner {
